[gd_scene load_steps=2 format=3 uid="uid://vo1mtxu8tgqp"]

[ext_resource type="Script" path="res://Scenes/Components/GUI/VisualInventoryItem.gd" id="1_sejke"]

[node name="VisualInventoryItem" type="Control"]
custom_minimum_size = Vector2(115, 115)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1805.0
offset_bottom = -965.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_sejke")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.145266, 0.145266, 0.145266, 0.627451)

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="ItemAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.5
offset_top = -23.0
offset_right = 9.5
grow_horizontal = 2
grow_vertical = 0
text = "10"

[node name="Equipped" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -12.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 22
text = "E"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
